added auth screen and ui managers

--- a/pos_mobile_app/pubspec.yaml
+++ b/pos_mobile_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   pos_mobile_ui_package:
     path: ../pos_mobile_ui_package
   storybook_flutter: ^0.11.1
+  flutter_svg: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +64,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/icons/
+    - assets/images/auth/
+    # - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
