--- a/pos_mobile_ui_package/pubspec.yaml
+++ b/pos_mobile_ui_package/pubspec.yaml
@@ -21,7 +21,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # To add assets to your package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -38,17 +37,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: U8
+      fonts:
+        - asset: assets/fonts/U8-Black.otf
+        - asset: assets/fonts/U8-BlackItalic.otf
+          style: italic
+        - asset: assets/fonts/U8-Bold.otf
+
+        - asset: assets/fonts/U8-BoldItalic.otf
+        - asset: assets/fonts/U8-Light.otf
   #
   # For details regarding fonts in packages, see
   # https://flutter.dev/custom-fonts/#from-packages
