added dashbaord screen and profile screen

--- a/pos_mobile_app/pubspec.yaml
+++ b/pos_mobile_app/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/auth/
+    - assets/images/MerchantDashboard/
     # - assets/icons/
   #   - images/a_dot_ham.jpeg
 
