--- a/pos_mobile_ui_package/pubspec.yaml
+++ b/pos_mobile_ui_package/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   dropdown_button2: ^1.8.5
   flutter_svg: ^1.1.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
