update dialog ui

--- a/pos_mobile_app/pubspec.yaml
+++ b/pos_mobile_app/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
     - assets/images/
     - assets/images/auth/
     - assets/images/MerchantDashboard/
+    - assets/images/adminDashboard/
     # - assets/icons/
   #   - images/a_dot_ham.jpeg
 
