--- a/pos_mobile_app/pubspec.yaml
+++ b/pos_mobile_app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_svg: ^1.1.0
   fluttertoast: ^8.1.1
   timelines: ^0.1.0
+  flutter_slidable:
 
 dev_dependencies:
   flutter_test:
