--- a/pos_mobile_app/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/pos_mobile_app/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -2,10 +2,13 @@
 FLUTTER_ROOT=/Users/esl_mos5/Developer/flutter
 FLUTTER_APPLICATION_PATH=/Users/esl_mos5/Documents/pos-mobile-app/pos_mobile_app
 COCOAPODS_PARALLEL_CODE_SIGN=true
+FLUTTER_TARGET=/Users/esl_mos5/Documents/pos-mobile-app/pos_mobile_app/lib/main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
+DART_DEFINES=RkxVVFRFUl9XRUJfQVVUT19ERVRFQ1Q9dHJ1ZQ==
 DART_OBFUSCATION=false
-TRACK_WIDGET_CREATION=false
+EXTRA_FRONT_END_OPTIONS=--no-sound-null-safety
+TRACK_WIDGET_CREATION=true
 TREE_SHAKE_ICONS=false
-PACKAGE_CONFIG=.dart_tool/package_config.json
+PACKAGE_CONFIG=/Users/esl_mos5/Documents/pos-mobile-app/pos_mobile_app/.dart_tool/package_config.json
