--- a/pos_mobile_app/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/pos_mobile_app/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,14 +1,11 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/esl_mos5/Developer/flutter
-FLUTTER_APPLICATION_PATH=/Users/esl_mos5/Documents/pos-mobile-app/pos_mobile_app
+FLUTTER_ROOT=/Users/macbookpro/development/flutter
+FLUTTER_APPLICATION_PATH=/Users/macbookpro/Documents/pos_mobile/pos_mobile_app
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=/Users/esl_mos5/Documents/pos-mobile-app/pos_mobile_app/lib/main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
-DART_DEFINES=RkxVVFRFUl9XRUJfQVVUT19ERVRFQ1Q9dHJ1ZQ==
 DART_OBFUSCATION=false
-EXTRA_FRONT_END_OPTIONS=--no-sound-null-safety
-TRACK_WIDGET_CREATION=true
+TRACK_WIDGET_CREATION=false
 TREE_SHAKE_ICONS=false
-PACKAGE_CONFIG=/Users/esl_mos5/Documents/pos-mobile-app/pos_mobile_app/.dart_tool/package_config.json
+PACKAGE_CONFIG=.dart_tool/package_config.json
