--- a/pos_mobile_app/android/app/src/main/AndroidManifest.xml
+++ b/pos_mobile_app/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.spartanmedia.pos.pos_mobile_app">
+     <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="pos_mobile_app"
+        android:label="POS Mobile"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
