--- a/pos_mobile_app/android/app/src/main/AndroidManifest.xml
+++ b/pos_mobile_app/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
      <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="POS Mobile"
-        android:icon="@mipmap/launcher_icon">
+        android:icon="@mipmap/launcher_icon" 
+        android:requestLegacyExternalStorage="true">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
