--- a/pos_mobile_app/pubspec.yaml
+++ b/pos_mobile_app/pubspec.yaml
@@ -48,9 +48,12 @@ dependencies:
   firebase_crashlytics:
   fl_chart: ^0.55.2
   intl: ^0.17.0
+  moment_dart: ^0.12.0
+  firebase_storage:
+  image_picker: ^0.8.6
 
-dependency_overrides:
-  firebase_core_platform_interface: 4.5.1
+# dependency_overrides:
+#   firebase_core_platform_interface: 4.5.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
