--- a/pos_mobile_ui_package/pubspec.yaml
+++ b/pos_mobile_ui_package/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   dropdown_button2: ^1.8.5
   flutter_svg: ^1.1.0
   intl: ^0.17.0
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
