--- a/pos_mobile_app/pubspec.yaml
+++ b/pos_mobile_app/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   moment_dart: ^0.12.0
   firebase_storage:
   image_picker: ^0.8.6
+  flutter_countdown_timer: ^4.1.0
 
 # dependency_overrides:
 #   firebase_core_platform_interface: 4.5.1
