--- a/pos_mobile_app/pubspec.yaml
+++ b/pos_mobile_app/pubspec.yaml
@@ -44,17 +44,20 @@ dependencies:
   fluttertoast: ^8.1.1
   timelines: ^0.1.0
   flutter_slidable:
-  firebase_core:
-  firebase_crashlytics:
   fl_chart: ^0.55.2
   intl: ^0.17.0
   moment_dart: ^0.12.0
-  firebase_storage:
   image_picker: ^0.8.6
   flutter_countdown_timer: ^4.1.0
+  firebase_core: ^1.12.0
+  firebase_crashlytics:
+  firebase_storage:
 
 # dependency_overrides:
 #   firebase_core_platform_interface: 4.5.1
+dependency_overrides:
+  firebase_crashlytics_platform_interface: 3.1.13
+  firebase_storage_platform_interface: 4.0.14
 
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
