--- a/pos_mobile_app/pubspec.yaml
+++ b/pos_mobile_app/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_countdown_timer: ^4.1.0
   firebase_core: ^2.4.0
   firebase_storage: ^11.0.7
+  url_launcher: ^6.1.7
   # firebase_core: ^1.12.0
   # firebase_crashlytics:
   # firebase_storage:
