--- a/pos_mobile_ui_package/pubspec.yaml
+++ b/pos_mobile_ui_package/pubspec.yaml
@@ -27,7 +27,9 @@ dev_dependencies:
 flutter:
   # To add assets to your package, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
+  #   - assets/images/record.png
+  #   - assets/images/track.png
+  #   - assets/images/manage.png
   #   - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
