--- a/pos_mobile_app/ios/GoogleService-Info.plist
+++ b/pos_mobile_app/ios/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>982984562092-rrp32o28celudsvdvf3qvm6tg69a8ing.apps.googleusercontent.com</string>
+	<string>982984562092-c62o9df2q7jcijgs8f16t6s73lb6c587.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.982984562092-rrp32o28celudsvdvf3qvm6tg69a8ing</string>
+	<string>com.googleusercontent.apps.982984562092-c62o9df2q7jcijgs8f16t6s73lb6c587</string>
 	<key>ANDROID_CLIENT_ID</key>
 	<string>982984562092-7bhsklbmipfggqk8v9k9q2eln9euoeso.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.spartanmedia.recordbeta.posMobileApp</string>
+	<string>com.spartanmedia.recordbeta</string>
 	<key>PROJECT_ID</key>
 	<string>pos-app-e85e4</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:982984562092:ios:c6de33a4157673a49ed609</string>
+	<string>1:982984562092:ios:7749301693f88bb29ed609</string>
 </dict>
 </plist>
