--- a/pos_mobile_app/pubspec.yaml
+++ b/pos_mobile_app/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   firebase_storage: ^11.0.7
   url_launcher: ^6.1.7
   jwt_decoder: ^2.0.1
+  firebase_messaging: ^14.2.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
