--- a/pos_mobile_app/android/app/src/main/AndroidManifest.xml
+++ b/pos_mobile_app/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.spartanmedia.recordbeta.pos_mobile_app">
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <queries>
         <!-- If your app checks for SMS support -->
         <intent>
