--- a/pos_mobile_app/pubspec.yaml
+++ b/pos_mobile_app/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   url_launcher: ^6.1.7
   jwt_decoder: ^2.0.1
   firebase_messaging: ^14.2.1
+  firebase_crashlytics: ^3.0.10
 
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
