--- a/pos_mobile_app/ios/Runner/Info.plist
+++ b/pos_mobile_app/ios/Runner/Info.plist
@@ -60,5 +60,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+	<true/>
 </dict>
 </plist>
