--- a/pos_mobile_app/pubspec.yaml
+++ b/pos_mobile_app/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   firebase_messaging: ^14.2.1
   firebase_crashlytics: ^3.0.10
   flutter_local_notifications: ^13.0.0
+  sign_in_with_apple: ^4.3.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
